--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,48 @@
 \n\nAdd water or chicken stock depending on the consistency you want for the sauce, or let simmer longer to thicken if needed.
 \n\nStir in the brown sugar, fish sauce, and lime juice. Taste and salt if needed
 Top with fresh cilantro, serve over cooked rice.</string>
+    <string name="fried_rice_ind">1. 2 tbsp. extra-virgin olive oil
+\n2. 3 chicken breasts (about 1 1/4 lb.)
+\n3. Kosher salt
+\n4. Freshly ground black pepper
+\n5. 2 tbsp. sesame oil, divided
+\n6. 1 medium onion, chopped
+\n7. 2 carrots, peeled and diced
+\n8. 3 cloves garlic, minced
+\n9. 1 tbsp. freshly minced ginger
+\n10. 4 c. cooked white rice (preferably leftover)
+\n11. 3/4 c. frozen peas
+\n12. 3 large eggs, beaten
+\n13. 3 tbsp. low-sodium soy sauce
+\n14. 2 green onions, thinly sliced</string>
+    <string name="fried_rice_pro">In a medium skillet over medium heat, heat olive oil. Season chicken with salt and pepper on both sides, then add to skillet, and cook until golden and no longer pink, 8 minutes per side. Remove from skillet and let rest 5 minutes, then cut into bite-sized pieces.
+\n\nTo the same skillet, heat 1 tablespoon sesame oil. Add onion and carrots and cook until soft, 5 minutes, Add garlic and ginger and cook until fragrant, 1 minute more. Stir in rice and peas and cook until warmed through, 2 minutes.
+\n\nPush rice to one side of skillet and add remaining tablespoon sesame oil to other side. Add egg and stir until almost fully cooked, then fold eggs into rice. Add chicken back to skillet with soy sauce and green onions and stir to combine.</string>
+    <string name="sushi_roll_ind">1. 2/3 cup uncooked short-grain white rice\n2. 3 tablespoons rice vinegar\n3. 3 tablespoons white sugar1\n3. 1/2 teaspoons salt4 sheets nori seaweed sheets</string>
+    <string name="sushi_roll_pro">In a medium saucepan, bring 1 1/3 cups water to a boil. Add rice, and stir. Reduce heat, cover, and simmer for 20 minutes. In a small bowl, mix the rice vinegar, sugar ,and salt. Blend the mixture into the rice.
+\n\nPreheat oven to 300 degrees F (150 degrees C). On a medium baking sheet, heat nori in the preheated oven 1 to 2 minutes, until warm.
+\n\nCenter one sheet nori on a bamboo sushi mat. Wet your hands. Using your hands, spread a thin layer of rice on the sheet of nori, and press into a thin layer. Arrange 1/4 of the cucumber, ginger, avocado, and imitation crabmeat in a line down the center of the rice. Lift the end of the mat, and gently roll it over the ingredients, pressing gently. Roll it forward to make a complete roll. Repeat with remaining ingredients.
+\n\nCut each roll into 4 to 6 slices using a wet, sharp knife</string>
+    <string name="miso_soup_ind">1. 2 cups water
+\n2. 1 (2-inch) piece kombu (dried black kelp)
+\n3. 1/2 cup loosely packed dried bonito flakes (katsuobushi), optional
+   \n4. 4 ounces silken or firm tofu, drained
+\n5. 1 to 2 medium scallions
+\n6. 2 tablespoons red or white miso paste</string>
+    <string name="miso_soup_pro">Make the dashi (See step-by-step instructions: How To Make Dashi). Combine the water and kombu in a 1-quart saucepan over medium heat. Remove the kombu just as the water starts to come to a boil. Add the bonito flakes, if using, and let the water come to a rapid simmer. Simmer for about 1 minute, then remove the pan from heat and let the bonito steep for an additional 5 minutes. Strain the bonito from the dashi. Add additional water if necessary to make 2 cups. Alternatively, substitute 2 cups water, chicken broth, or vegetable broth.
+\n\nPrepare the tofu and scallions. Cut the tofu into very small cubes, 1/4-inch to 1/2-inch on each side. Slice the scallions very thinly.
+\n\nBring the broth to a rapid simmer. Pour the dashi or broth back into the saucepan and bring to a rapid simmer over medium-high heat.
+\n\nMix the miso with 1/2 cup hot broth. Place the miso in a small ramekin or measuring cup. Scoop out about 1/2 cup of the broth and pour it over the miso. Whisk with a fork or whisk until the miso is entirely dissolved in the water and no lumps remain.
+Pour the miso into the broth. Pour the dissolved miso into the simmering broth.
+\n\nAdd the tofu. Reduce the heat to medium-low and add the tofu to the miso. Simmer just enough to warm the tofu, 1 to 2 minutes. Do not boil the miso once the tofu has been added.
+\n\nAdd the scallions. Just before serving, scatter the scallions over the top of the soup.
+\n\nServe in individual bowls. Pour the miso into individual bowls and serve. Miso is best when served fresh. It will settle a bit as it sits in the broth; whisk briefly with chopsticks or a spoon to mix the soup again.</string>
+    <string name="mums_chicken_ind">1. 8 chicken drumsticks, skin on (the skin is important for flavour, and is so tasty to eat!)
+2. 1 cup water
+3. 1/2 cup balsamic vinegar
+4. 1/3 cup soy sauce
+5. 2 1/2 tablespoons sugar
+6. 1 garlic clove, peeled and bruised
+7. 1 small hot chili pepper, slit open, seeds removed</string>
+    <string name="mums_chicken_pro">The liquid will thicken to a glaze if you are patient. It just takes a bit of time. If you feel your chicken is cooked (and going to overcook) remove it before going on to reduce the liquid. Same thing, if you must use breast meat, remove it (so it doesn't dry out) and continue reducing the liquid . If you do it this way rather than thickening with cornstarch you will get a richer glaze and not need to add stock or broth instead of the water. It just takes patience. AND NOTE: A glaze is sticky and coats the meat, this is NOT a sauce</string>
 </resources>
