--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,7 +98,7 @@ Pour the miso into the broth. Pour the dissolved miso into the simmering broth.
 5. 2 1/2 tablespoons sugar\n
 6. 1 garlic clove, peeled and bruised\n
 7. 1 small hot chili pepper, slit open, seeds removed</string>
-    <string name="mums_chicken_pro">The liquid will thicken to a glaze if you are patient. It just takes a bit of time. If you feel your chicken is cooked (and going to overcook) remove it before going on to reduce the liquid. Same thing, if you must use breast meat, remove it (so it doesn't dry out) and continue reducing the liquid . If you do it this way rather than thickening with cornstarch you will get a richer glaze and not need to add stock or broth instead of the water. It just takes patience. AND NOTE: A glaze is sticky and coats the meat, this is NOT a sauce</string>
+    <string name="mums_chicken_pro">The liquid will thicken to a glaze if you are patient. It just takes a bit of time. If you feel your chicken is cooked (and going to overcook) remove it before going on to reduce the liquid. Same thing, if you must use breast meat, remove it </string>
     <string name="chessy_chicken_ind">1. 2 tsp. oil\n
  2. 4 small boneless skinless chicken breasts (1 lb.)\n
  3. 2 cups frozen broccoli florets, thawed\n
@@ -109,7 +109,7 @@ Pour the miso into the broth. Pour the dissolved miso into the simmering broth.
 \n2. Add broccoli, soup and VELVEETA to skillet; mix well. Cook on medium heat 7 min. or until VELVEETA is melted and sauce is heated through, stirring frequently.
 \n3. Serve chicken and broccoli mixture over rice.</string>
     <string name="potato_salad_ind">1. 5 potatoes3 eggs\n2. 1 cup chopped celery\n3. 1/2 cup chopped onion\n4. 1/2 cup sweet pickle relish\n5. 1/4 teaspoon garlic salt\n6. 1/4 teaspoon celery salt1 tablespoon prepared mustardground black pepper to taste\n7. 1/4 cup mayonnaise</string>
-    <string name="potato_salad_ind">Bring a large pot of salted water to a boil. Add potatoes and cook until tender but still firm, about 15 minutes. Drain, cool, peel and chop.
+    <string name="potato_salad_pro">Bring a large pot of salted water to a boil. Add potatoes and cook until tender but still firm, about 15 minutes. Drain, cool, peel and chop.
 Place eggs in a saucepan and cover with cold water. Bring water to a boil; cover, remove from heat, and let eggs stand in hot water for 10 to 12 minutes. Remove from hot water, cool, peel and chop.
 In a large bowl, combine the potatoes, eggs, celery, onion, relish, garlic salt, celery salt, mustard, pepper and mayonnaise. Mix together well and refrigerate until chilled.</string>
 <string name="pizza_pasta_ind">1. 8 ounces rotini pasta\n2. 1 pound lean ground beef\n3. 1 small onion, diced1 (28 ounce) jar spaghetti sauce\n4. 4 ounces sliced pepperoni sausage\n5. 2 cups shredded mozzarella cheese</string>
